<resources>

    <string name="app_name">SketchnPlay</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_splash">Splash</string>
    <string name="start_string">Start</string>
    <string name="settings_string">Settings</string>
    <string name="quit_string">Quit</string>
    <string name="title_activity_settings">Settings</string>
	<string name="background_colour">Background Colour</string>
	<string name="fps">FPS</string>
	<string name="submit">Submit</string>
	
	<string-array name="bg_colours">
        <item>White</item>
        <item>Black</item>
        <item>Red</item>
        <item>Blue</item>
        <item>Yellow</item>
        <item>Orange</item>
        <item>Green</item>
        <item>Magenta</item>
        <item>Cyan</item>
        <item>Gray</item>
    </string-array>
</resources>